replaced 'computation' with 'task' in the spec
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13808 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Input_and_Output.tex
+++ b/spec/Input_and_Output.tex
@@ -118,7 +118,7 @@ Default \chpl{writeThis} methods are bound to any type that the user
 does not explicitly create one for.
 
 A lock is used to ensure that output is serialized across multiple
-computations.
+tasks.
 
 \subsubsection{The {\em write} and {\em writeln} method on strings}
 \label{stringwrite}
