--- a/spec/Standard_Modules.tex
+++ b/spec/Standard_Modules.tex
@@ -735,7 +735,7 @@ Stops the timer.  It is an error to stop a timer that is not running.
 def sleep(t: uint)
 \end{protohead}
 \begin{protobody}
-Delays the computation for \chpl{t} seconds.
+Delays a task for \chpl{t} seconds.
 \end{protobody}
 
 \subsection{Types}
