Add a varargs example
Add an example using variable length arguments. It starts with a simple int
varargs function that writes the arguments, then a generic one that does the
same, then one that taken types and returns their default values. Finally, 
one that computes the greatest common divisor of any number of integers.

Updated the README, Makefile, and README.features.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13809 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -28,6 +28,7 @@ demonstrate various Chapel features:
      slices.chpl            : examples of array slicing and reindexing
      sparse.chpl            : sparse domain/array tutorial example
      tree.chpl              : constructs and walks a tree in parallel
+     varargs.chpl           : demonstration of variable argument functions
 
 The hpcc subdirectory contains Chapel versions of three HPC Challenge
 benchmarks:
