Minor release changes
Updated the user agreement's statement of the release goals
to include multi-locale execution.

Fixed a thinko in the CHANGES file describing the new
string comparison operators.

Bumped the version numbers of the emacs .el files.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13810 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/CHANGES
+++ b/CHANGES
@@ -35,7 +35,7 @@ Changes to Chapel Language:
 - removed the "ordered" keyword and concept
 - added support for a compilerWarning() call similar to compilerError()
   e.g., compilerWarning("I didn't expect this function to be called");
-- added string inequality comparison operators
+- added string relational operators
   e.g., ..."hi" >= "bye"...
 - added a sorted() iterator to associative domains/arrays and opaque arrays
   e.g., var table: domain(string); ...  for entry in table.sorted() do ...
