Took pass over README files
This is my pass over the README files for this release.
In most cases, this was just simple text and formatting
edits.

* README.multilocale contains a large number of changes
  (the previous version was developed quickly for Aniruddha's
  use and to provide a starting point for this release).

* README.xt-cnl is new and walks through the steps for using
  an XT all in one place since it has a few unique notes and
  more settings than most platforms users will be using.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13818 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/README
+++ b/README
@@ -68,8 +68,9 @@ For more detailed information about...      refer to...
   ...setting up your environment             ...doc/README.chplenv
   ...using the compiler                      ...doc/README.compiling
   ...executing Chapel programs               ...doc/README.executing
-  ...implementation status                   ...STATUS
+  ...executing programs on multiple locales  ...doc/README.multilocale
   ...changes since the last release          ...CHANGES
+  ...implementation status                   ...STATUS
   ...reporting bugs                          ...doc/README.bugs
   ...example Chapel programs                 ...examples/README
   ...an overview of the Chapel language      ...doc/chapelLanguageSpec.pdf, Ch5
@@ -81,5 +82,6 @@ For more detailed information about...      refer to...
   ...calling C routines from Chapel          ...doc/README.extern
   ...formatting value-to-string conversions  ...doc/README.format
   ...notes for Cygwin users                  ...doc/README.cygwin
+  ...notes for Cray XT (UNICOS/lc) users     ...doc/README.xt-cnl
   ...third-party software that we use        ...third-party/README
   ...the GASNet communication library        ...third-party/gasnet/README
