More README edits
A few minor edits to READMEs.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13819 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/doc/release/README
+++ b/doc/release/README
@@ -4,6 +4,7 @@ Chapel doc README
 
 This directory contains the following documentation:
 
+  README             : this file
   README.bugs        : how to report bugs or suggestions to the Chapel team
   README.building    : information about building the Chapel compiler
   README.chplenv     : setting up your environment to use Chapel
